<resources>
    <string name="app_name">CampingDiary</string>
    <string name="no_reisen">You don\'t have any Tours.</string>
    <string name="new_reise">Start tour</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="today">Today</string>
    <string name="custom">Custom</string>
    <string name="starting_time">Starting Time:</string>
    <string name="no_name">No name</string>
    <string name="description">Description</string>
    <string name="no_name_toast"> You have to name the tour.</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="date">Date</string>
    <string name="trip">Trip</string>
    <string name="activities">Activities</string>
    <string name="trips">Trips</string>
    <string name="all_reisen">All Trips</string>
    <string name="all_stats">Alltime Stats</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="current_trip">Current trip</string>

    <string name="days">Days</string>
    <string name="costs">Costs</string>
    <string name="fuel">Fuel</string>
    <string name="distance">Distance</string>
    <string name="water">Water</string>
    <string name="countries">Countries</string>
    <string name="last_night">Last night</string>
    <string name="all_nights">All\nnights</string>
    <string name="last_event">Last event</string>
    <string name="start_reise">Start tour</string>
    <string name="start_today">Start:</string>
    <string name="end">End:</string>
    <string name="one_week">One Week</string>
    <string name="two_weeks">Two weeks</string>
    <string name="three_weeks">Three Weeks</string>
    <string name="four_weeks">Four weeks </string>
    <string name="err_no_name">Please name the tour.</string>
    <string name="err_multiple_reisen">Please finish your current Tour first.</string>
    <string name="one_day">One day</string>
    <string name="two_days">Two days</string>
    <string name="category">Category</string>
    <string name="campsite">Campsite</string>
    <string name="motorhome_area">Motorhome area</string>
    <string name="parking_area">Parking area</string>
    <string name="resting_spot">Resting spot</string>
    <string name="nature">Nature</string>
    <string name="farm">Farm</string>
    <string name="off_road">Off road</string>
    <string name="price">Price</string>
    <string name="change_currency">Change currency:</string>
    <string name="err_no_name_event">Please name the event</string>
    <string name="select_currency">Select currency</string>
    <string name="none">None</string>
    <string name="new_night">New night</string>
    <string name="nights">Nights</string>
    <string name="inspect">Inspect</string>
    <string name="show_on_map">Show on map</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="action">Action</string>
    <string name="place">Place</string>
    <string name="place_dots">Place:</string>
    <string name="select_place">Select Place</string>
    <string name="search">Search</string>
    <string name="new_place">New Place</string>
    <string name="choose_place">Choose place</string>
    <string name="suggestions">Suggestions</string>
    <string name="gps">GPS</string>
    <string name="google">Google</string>
    <string name="coordinates">Coordinates</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="only_cords">Only current coordinates</string>
    <string name="google_search">Google search</string>
    <string name="please_allow_gps">Please grant the location permission</string>
    <string name="n_a">N/A</string>
    <string name="not_selected">Not selected</string>
    <string name="pick_on_map">Pick on map</string>
    <string name="no_gps">No GPS</string>
    <string name="err_gps_disabled">Your GPS seems to be disabled. Do you want to turn it on?</string>
    <string name="err_no_place_selected">Please select or create a place</string>
    <string name="err_no_name_place">Please name the place</string>
    <string name="overview">Overview</string>
    <string name="current_nights">Current nights</string>
    <string name="current_events">Current events</string>
    <string name="distance_points">Distance</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort by</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="apply">Apply</string>
    <string name="distance_in_km">Distance in km</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unnammed">Unnammend</string>
    <string name="select">Select</string>
    <string name="night">Night</string>
    <string name="to_fuel">Fuel</string>
    <string name="sad">Supply and Disposal</string>
    <string name="sport">Sport</string>
    <string name="sightseeing">Sightseeing</string>
    <string name="hiking">Hiking</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="swimming">Swimming</string>
    <string name="shopping">Shopping</string>
    <string name="eating">Eating</string>
    <string name="new_event">New event</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="now">Now</string>
    <string name="one_hour">1 hour</string>
    <string name="two_hours">2 hours</string>
    <string name="back">Back</string>
    <string name="in_two_hours">in two hours</string>
    <string name="in_one_hour">in one hour</string>
    <string name="toast_end_day_before_start">Please select a day after the beginning</string>
    <string name="toast_start_and_end_one">Please select a later time.</string>
    <string name="toast_end_time_before_start">" Please select a time after the beginning"</string>
    <string name="done">Done</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_time">Choose time</string>
    <string name="amount">Amount</string>
    <string name="whole_price">Whole price</string>
    <string name="price_liter">Price per liter</string>
    <string name="new_fuel">New fuel stop</string>
    <string name="grey_water">Grey water</string>
    <string name="toilette">Toilette</string>
    <string name="garbage">Garbage</string>
    <string name="gas">Gas</string>
    <string name="water_amount">Amount of water in liter</string>
    <string name="new_sad">New supply and disposal</string>
    <string name="events">Events</string>
    <string name="toast_no_place">No place available.</string>
    <string name="attention">Attention</string>
    <string name="dialog_delete_night">Are you sure you want to delete this night?</string>
    <string name="dialog_delete_event">Are you sure you want to delete the Event?</string>
    <string name="dialog_delete_fuel">Are you sure you want to delete the fuel?</string>
    <string name="dialog_delete_sad">Are you sure you want to delete the supply and disposal?</string>
    <string name="dialog_delete_palce">Are you sure you want to delete the place?</string>
    <string name="fuels">Fuels</string>
    <string name="sads">Supplies and disposals</string>
    <string name="current_fuels">Current fuels</string>
    <string name="current_sads">Current supplies and disposals</string>
    <string name="dialog_delete_reise">Are you sure you want to delete the tour?</string>
    <string name="mileage">Mileage</string>
    <string name="new_route">New Route</string>
    <string name="all_routes">All routes</string>
    <string name="dialog_delete_route">Are you sure you want to delete the route?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="sort_by_values">
        <item>name</item>
        <item>address</item>
        <item>distance</item>
        <item>creation date</item>
        <item>number of visits</item>
        <item>last visited</item>
    </string-array>
    <string name="prices">Prices</string>
</resources>