<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/group_current"
            android:title="@string/current_trip">
            <menu>
                <item
                    android:id="@+id/currentReiseFragment"
                    android:icon="@drawable/ic_today"
                    android:title="@string/overview" />
                <item
                    android:id="@+id/allNightsFragment"
                    android:icon="@drawable/ic_night"
                    android:title="@string/current_nights" />
                <item
                    android:icon="@drawable/ic_walk"
                    android:title="@string/current_events" />
            </menu>
        </item>
        <item
            android:id="@+id/group_reisen"
            android:title="@string/trips">
            <menu>
                <item
                    android:id="@+id/allReisenFragment"
                    android:icon="@drawable/ic_calendar"
                    android:title="@string/all_reisen" />
                <item
                    android:id="@+id/id_it_alltime_stats"
                    android:icon="@drawable/ic_stats"
                    android:title="@string/all_stats" />
            </menu>
        </item>
    </group>
    <group>
        <item
            android:id="@+id/group_other"
            android:title="@string/other">
            <menu>
                <item
                    android:id="@+id/it_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/it_about"
                    android:icon="@drawable/ic_info"
                    android:title="@string/about" />
            </menu>
        </item>
    </group>
</menu>