<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.events.newEvent.NewEventCategorySelectorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.jochef2.campingdiary.ui.events.newEvent.FlexMaterialButtonToogleGroup
            android:id="@+id/toggle_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            app:alignItems="stretch"
            app:flexDirection="row"
            app:flexWrap="wrap"
            app:justifyContent="space_evenly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="NIGHT"
                android:text="@string/night"
                app:icon="@drawable/ic_night"
                app:iconGravity="top"
                tools:layout_editor_absoluteX="8dp" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="FUEL"
                android:text="@string/to_fuel"
                app:iconGravity="top"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="67dp" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:tag="SAD"
                android:text="@string/sad"
                app:iconGravity="top"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="67dp" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:tag="SPORT"
                android:text="@string/sport"
                app:iconGravity="top"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="67dp" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:tag="SIGHTSEEING"
                android:text="@string/sightseeing"
                app:iconGravity="top"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="115dp" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:tag="HIKING"
                android:text="@string/hiking"
                app:icon="@drawable/ic_hiking"
                app:iconGravity="top" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:tag="WALKING"
                android:text="@string/walking"
                app:icon="@drawable/ic_walk"
                app:iconGravity="top" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:tag="RUNNING"
                android:text="@string/running"
                app:icon="@drawable/ic_run"
                app:iconGravity="top" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:tag="SWIMMING"
                android:text="@string/swimming"
                app:icon="@drawable/ic_water"
                app:iconGravity="top" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:tag="SHOPPING"
                android:text="@string/shopping"
                app:icon="@drawable/ic_shopping"
                app:iconGravity="top" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:tag="EATING"
                android:text="@string/eating"
                app:icon="@drawable/ic_food"
                app:iconGravity="top" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:tag="OTHER"
                android:text="@string/other"
                app:iconGravity="top" />
        </com.jochef2.campingdiary.ui.events.newEvent.FlexMaterialButtonToogleGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>